--- a/eds221_day3_forloops_conditionals.Rmd
+++ b/eds221_day3_forloops_conditionals.Rmd
@@ -9,6 +9,7 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE, warning = FALSE, message = FALSE)
 
 library(tidyverse)
+library(palmerpenguins)
 ```
 
 ### `if` statements
@@ -69,4 +70,120 @@ if (marmot < 0.5) {
 } else {
   print("this is a large marmot!")
 }
+```
+
+### `group_by() %>% summarize()`
+
+```{r}
+#we will look in the species column, so put that right after 'group_by' 
+# we are applying this BY GROUP 
+#starting from penguins, then under the hood we tell R to recognize the diff groups by species and next, calculate mean by individual groups, then sd
+penguins |> 
+  group_by(species) |> 
+  summarize(mean_bill_length = mean(bill_length_mm,
+                                    na.rm = TRUE),
+            sd_bill_length = sd(bill_length_mm,
+                                na.rm = TRUE),
+            n= n())
+
+
+#1. find the mean and sd of character height in 'Star Wars', grouped by home world
+
+starwars |> 
+  group_by(homeworld) |> 
+  summarize(mean_height = mean(height, na.rm =TRUE),
+            sd_height = sd(height, na.rm = TRUE))
+
+
+#2. find the max and min flipper length and sample size for each species of penguins
+penguins |> 
+  group_by(species) |> 
+  summarize(max_flipperlength = max(flipper_length_mm, na.rm = TRUE),
+            min_flipper_length = min(flipper_length_mm, na.rm = TRUE))
+
+
+
+#use the across function to do calculations across many columns that satisfy __ conditions
+
+
+#for each group of species, asking if they are numeric, and returns mean value
+penguins |> 
+  group_by(species) |> 
+  summarize(across(where(is.numeric), mean, na.rm = TRUE))
+```
+
+### For loops with cumulative calculations
+
+```{r}
+# we want each element in the vector to add to the next
+
+tree_height <- c(1, 2, 6, 10, 14, 20)
+
+for(i in seq_along(tree_height)) {
+  val = tree_height[i] + tree_height[i + 1]
+  print(val)
+}
+```
+
+### For loop with conditional statement
+
+```{r}
+# we want a vector that converts age in human years to animal years, where the conversion is based on animal type
+
+#make empty vector to store below for loop output to
+animal_ages <- vector(mode= "numeric", length = length(species))
+
+species <- c("dog", "elephant", "goat", "dog", "dog", "elephant")
+
+age_human <- c(3, 8, 4, 6, 12, 18)
+
+for (i in seq_along(species)) {
+  if (species[i] == "dog") {
+    animal_age <- age_human[i] * 7
+    } else if (species[i] == "elephant") {
+      animal_age <- age_human[i] * 0.88
+    } else if (species[i] == "goat") {
+      animal_age <- age_human[i] * 4.7
+    }
+  animal_ages[i] <- animal_age
+}
+
+#last line of code is putting animal age into the animal ages vector that is run each time thru the loop
+```
+
+### For loops across data frames
+
+find mean value for each column in mtcars data set
+
+```{r}
+# first, make empty vector for values to be stored in
+mean_mtcars <- vector(mode = "numeric", length = ncol(mtcars))
+
+#make loop to calculate values at each iteration
+for (i in seq_along(mtcars)) {
+  mean_val <- mean(mtcars[[i]], na.rm = TRUE)
+  mean_mtcars[i] <- mean_val
+}
+
+mean_mtcars
+```
+
+### Functional programming example
+
+adding syntactic sugar (apply, across, and , map_df)
+
+```{r}
+#use apply to figure out mean like we did in the last code chunk
+apply(X = mtcars, MARGIN = 2, FUN = mean)
+
+#notice the capital argument names
+```
+
+#### Purrr
+
+```{r}
+map(.x = mtcars, .f = mean)
+#returns a list containing the mean of mtcars
+
+map_df(.x = mtcars, .f = mean)
 ```
